--- a/src/assets/styles/components/_site-header.scss
+++ b/src/assets/styles/components/_site-header.scss
@@ -4,12 +4,13 @@
   align-items: center;
   background: #1B1A1C;
   padding: 24px 0;
-
+  
   @media (max-width: 1079px) {
     position: fixed;
     width: 100%;
     top: 0;
     padding: 12px 12px;
+    box-shadow: 0px 1px 10px #1B1A1C;
   }
   
   &-logo {
@@ -151,7 +152,7 @@
         justify-content: center;
       }
 
-      &-button {
+      &-close {
         position: absolute;
         right: 12px;
         top: 12px;
@@ -258,8 +259,7 @@
           width: 100%;
         }
 
-        &-submenu {
-
+        .submenu {
           &-button {
             position: relative;
             display: flex;
@@ -273,7 +273,7 @@
             }
           }
 
-          .submenu {
+          &-dropdown {
             a {
               font-weight: 600;
               font-size: 14px;
@@ -281,8 +281,6 @@
               color: #ffffffb8;
               height: 100%;
               padding: 8px 0 12px;
-              animation-duration: 600ms;
-              animation-name: blur;
 
               span {
                 font-weight: 700;
@@ -293,18 +291,6 @@
                 border-radius: 4px;
                 padding: 1px 4px;
                 margin-left: 6px;
-              }
-            }
-            
-            @keyframes blur {
-              from {
-                opacity: 0;
-                filter: blur(10px);
-              }
-            
-              to {
-                opacity: 1;
-                filter: blur(0);
               }
             }
           }
