--- a/src/assets/styles/_globals.scss
+++ b/src/assets/styles/_globals.scss
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: sans-serif
+  font-family: 'Inter', sans-serif;
 }
 
 body {
@@ -40,4 +42,45 @@ a {
   @media (max-width: 1079px) {
     display: none;
   }
+}
+
+h1 {
+  color: #FFF;
+  font-size: 64px;
+  font-weight: 900;
+  line-height: 72px;
+
+  @media (max-width: 1079px) {
+    font-size: 40px;
+    line-height: 44px;
+    letter-spacing: -0.8px;
+  }
+}
+
+h2 {
+  color: #FFF;
+  font-size: 56px;
+  font-weight: 900;
+  line-height: 62px;
+  letter-spacing: -1.12px;
+
+  @media (max-width: 1079px) {
+    font-size: 36px;
+    line-height: 38px;
+  }
+}
+
+h3 {
+  color: #FFF;
+  font-size: 24px;
+  font-weight: 900;
+  line-height: 28px;
+}
+
+h4 {
+  color: #FFF;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+  opacity: 0.8;
 }
