--- a/src/assets/styles/pages/about-page/_hero-block.scss
+++ b/src/assets/styles/pages/about-page/_hero-block.scss
@@ -3,8 +3,8 @@
   
   @media (min-width: 1079px) {
     background-image: url('@/assets/img/about-hero-bg.png');
-    background-size: no-repeat;
     background-position: center;
+    background-repeat: no-repeat;
   }
 
   @media (max-width: 1079px) {
