--- a/src/assets/styles/components/_site-header.scss
+++ b/src/assets/styles/components/_site-header.scss
@@ -138,6 +138,7 @@
       background: #29282A;
       border-radius: 8px;
       padding: 8px 0;
+      z-index: 66;
 
       @media (max-width: 1079px) {
         top: 0;
