--- a/src/assets/styles/pages/main-page/_partner-list.scss
+++ b/src/assets/styles/pages/main-page/_partner-list.scss
@@ -9,5 +9,48 @@
     max-width: 1440px;
     margin: 0 auto;
     padding-top: 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+
+    .slider {
+      &-slide {
+        height: 120px;
+        max-width: 320px;
+        background: #FFFFFF0A;
+        border-radius: 12px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+
+        img {
+          filter: grayscale(100%);
+        }
+
+        &:hover {
+          img {
+            filter: grayscale(0%);
+            transition: all .3s ease-in-out;
+          }
+        }
+      }
+    }
+
+    .shadow {
+      position: absolute;
+      background: linear-gradient(270deg, #1B1A1C 0%, rgba(27, 26, 28, 0.00) 114.64%);
+      width: 180px;
+      height: 256px;
+    }
+
+    .before {
+      left: 0;
+      transform: scaleX(-1);
+    }
+
+    .after {
+      right: 0;
+    }
   }
 }
