--- a/src/assets/styles/pages/main-page/_partner-list.scss
+++ b/src/assets/styles/pages/main-page/_partner-list.scss
@@ -1,8 +1,16 @@
 .partner-list {
   padding-bottom: 120px;
 
+  @media (max-width: 1079px) {
+    padding-bottom: 48px;
+  }
+
   &-title {
     text-align: center;
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+    align-items: center;
   }
 
   &-carousel {
@@ -12,6 +20,10 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+
+    @media (max-width: 1079px) {
+      padding-top: 24px;
+    }
 
     .slider {
       &-slide {
@@ -24,8 +36,19 @@
         justify-content: center;
         cursor: pointer;
 
+        @media (max-width: 1079px) {
+          height: 75px;
+          min-width: 200px;
+          max-width: 200px;
+        }
+
         img {
           filter: grayscale(100%);
+
+          @media (max-width: 1079px) {
+            filter: none;
+            width: 137px;
+          }
         }
 
         &:hover {
@@ -42,6 +65,10 @@
       background: linear-gradient(270deg, #1B1A1C 0%, rgba(27, 26, 28, 0.00) 114.64%);
       width: 180px;
       height: 256px;
+
+      @media (max-width: 1079px) {
+        display: none;
+      }
     }
 
     .before {
@@ -51,6 +78,34 @@
 
     .after {
       right: 0;
+    }
+  }
+
+  .button {
+    background: #02C076;
+    border-radius: 8px;
+    color: #29282a;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.1px;
+    height: 48px;
+    padding: 12px 24px;
+    cursor: pointer;
+
+    @media (max-width: 1079px) {
+      margin: 24px auto;
+      text-align: center;
+      max-width: 93%;
+    }
+
+    &:hover {
+      background: #01AD6A;
+      transition: all .3s ease-in-out;
+    }
+
+    &_container {
+      padding: 0 12px;
     }
   }
 }
