--- a/src/assets/styles/pages/main-page/_currency-block.scss
+++ b/src/assets/styles/pages/main-page/_currency-block.scss
@@ -12,6 +12,8 @@
     @media (max-width: 1079px) {
       flex-direction: column;
       gap: 24px;
+      max-width: max-content;
+      margin: 0 auto;
     }
 
     .title {
@@ -309,6 +311,13 @@
           }
         }
       }
+    }
+  }
+
+  .mob {
+    @media (max-width: 1079px) {
+      max-width: max-content;
+      margin: 24px auto 0;
     }
   }
 }
